# nexoscript

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.v  syntax.nexoscript  syntax.tree  v.mod
.github/workflows/: cmake-single-platform.yml  v-build.yml
compiler/: compiler.v  instructions.v
runner/: Function.v  NexoFile.v  build.v  function.v  instruction.v  nexo_file.v  nexoproject_handler.v  print.v  println.v  runner.v  string.v  utils.v  var.v  variables.v
runner/instructions/: Iinstruction.v  Print.v  Println.v  instruction.v  print.v  println.v  string.v  utils.v  var.v
src/: main.cpp
src/nexocompiler/: NexoCompiler.cpp  NexoCompiler.h
src/nexoengine/: NexoEngine.cpp  NexoEngine.h
src/nexoproject/: NexoProject.cpp  NexoProject.h  NexoProjectCfgReader.cpp  NexoProjectCfgReader.h
src/util/: Opcode.h  PrintUtils.cpp  PrintUtils.h  StringUtils.cpp  StringUtils.h
test/: lib.nexoscript  main.nexoscript  test.nexoproject
test/src/: main.nexoscript
tests/: syntax.nexoscript
tests/testproject/: test.nexoproject
tests/testproject/src/: main.nexo  main.nexoscript
